[package]
name = "token"
version = "1.2.0"
edition = "2021"
authors = [""]

[dependencies]
ink = { version = "4.0.0-beta.1", default-features = false }

scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2", default-features = false, features = ["derive"], optional = true }

openbrush = { git = "https://github.com/727-Ventures/openbrush-contracts", version = "3.0.0-beta.1", default-features = false, features = ["ownable", "psp34", "reentrancy_guard"] }

custom_mint_pkg = { path = "../../logics", version="1.2.0", default-features = false }

[lib]
name = "token"
path = "lib.rs"
crate-type = [
    # Used for normal contract Wasm blobs.
    "cdylib",
]

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info",
    "scale-info/std",

    "openbrush/std",
    "custom_mint_pkg/std",
]
ink-as-dependency = []

[profile.dev]
overflow-checks = false

[profile.release]
overflow-checks = false